--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,14 +6,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="css/pure-release-0.5.0/pure-min.css">
 </head>
 <body>
-  {% include header.html %}
-  <div class="page-content">
-    <div class="wrapper">
-      {{ content }}
-    </div>
-  </div>
+  {{ content }}
 </body>
 </html>
