--- a/css/cover.css
+++ b/css/cover.css
@@ -1,7 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Anton);
 
 #signin {
-  margin-top: 10px;
+  font-size: 12px;
+  margin-top: 15px;
+  padding: 8px 10px;
+  text-transform: uppercase;
+  float: right;
 }
 
 .cover {
@@ -27,6 +31,47 @@
   background-position: 0 0;
   background-repeat: repeat;
   background-size: auto auto;
+}
+
+.cover header {
+  width: 100%;
+  height: 45px;
+}
+
+.cover header h1 {
+  font-family: 'Anton', sans-serif;
+  margin: 0;
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+  padding-top: 15px;
+  float: left;
+}
+
+.cover header ul {
+  margin: 0;
+  padding: 0;
+  float: left;
+  padding-top: 22px;
+  margin-left: 40px;
+}
+
+.cover header ul li {
+  display: inline;
+  list-style: none;
+  margin-right: 15px;
+}
+
+.cover header ul li a {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.cover header ul li a:hover {
+  border-bottom: 1px dotted #fff;
+  padding: 5px 0;
 }
 
 .cover h2 {
