--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <link rel="stylesheet" href="css/pure-release-0.5.0/pure-min.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/cover.css">
+  <link rel="stylesheet" href="/css/pure-release-0.5.0/pure-min.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/cover.css">
+  <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
   {{ content }}
