--- a/css/cover.css
+++ b/css/cover.css
@@ -1,13 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Anton);
 
-#signin {
-  font-size: 12px;
-  margin-top: 15px;
-  padding: 8px 10px;
-  text-transform: uppercase;
-  float: right;
-}
-
 .cover {
   background-attachment: scroll;
   background-clip: border-box;
@@ -35,7 +27,16 @@
 
 .cover header {
   width: 100%;
-  height: 45px;
+  height: 60px;
+  background-color: transparent;
+}
+
+.cover header .signin {
+  font-size: 12px;
+  margin-top: 15px;
+  padding: 8px 10px;
+  text-transform: uppercase;
+  float: right;
 }
 
 .cover header h1 {
@@ -92,7 +93,7 @@
 }
 
 .cover .pure-g {
-  padding: 120px 0 165px;
+  padding: 105px 0 165px;
 }
 
 .features {
