--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/research-group/">Research Group</a></li>
-    <li><a href="/papers/">Papers</a></li>
+    <li><a href="/publications/">Publications</a></li>
     <li><a href="/features/">Features</a></li>
     <li><a href="/developers/">Developers</a></li>
     <li><a href="#">More</a></li>
