--- a/css/site.css
+++ b/css/site.css
@@ -5,7 +5,6 @@
   margin-top: 0;
   margin-bottom: 15px;
   text-transform: uppercase;
-  font-weight: 400;
 }
 
 .main h2 {
@@ -13,11 +12,19 @@
   color: #555;
 }
 
-ul.researchers {
+.main ul {
   margin: 0;
   padding: 0;
-  padding-bottom: 20px;
   margin-bottom: 30px;
+}
+
+.main ul li {
+  list-style: none;
+  margin: 15px 0;
+}
+
+ul.researchers {
+  padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
 }
 
