--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,10 @@
 <header>
   <button class="pure-button pure-button-primary signin">Sign in</button>
-  <h1>Collaborative PL-Science</h1>
+  <h1><a href="/">Collaborative PL-Science</a></h1>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/research-group/">Research Group</a></li>
     <li><a href="/publications/">Publications</a></li>
-    <li><a href="/features/">Features</a></li>
     <li><a href="/developers/">Developers</a></li>
-    <li><a href="#">More</a></li>
   </ul>
 </header>
