--- a/css/base.css
+++ b/css/base.css
@@ -22,3 +22,15 @@ body {
 a {
   color: #2082a9;
 }
+
+pre {
+  background-color: #e6e6e6;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 14px;
+}
+
+header h1 a {
+  text-decoration: none;
+  color: #fff;
+}
