--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
   <button class="pure-button pure-button-primary signin">Sign in</button>
-  <h1><a href="/">Collaborative PL-Science</a></h1>
+  <h1><a href="{{ site.baseurl }}">Collaborative PL-Science</a></h1>
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/research-group/">Research Group</a></li>
-    <li><a href="/publications/">Publications</a></li>
-    <li><a href="/developers/">Developers</a></li>
+    <li><a href="{{ site.baseurl }}">Home</a></li>
+    <li><a href="{{ "/research-group/" | prepend: site.baseurl }}">Research Group</a></li>
+    <li><a href="{{ "/publications/" | prepend: site.baseurl }}">Publications</a></li>
+    <li><a href="{{ "/developers/" | prepend: site.baseurl }}">Developers</a></li>
   </ul>
 </header>
