--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <button class="pure-button pure-button-primary signin">Sign in</button>
-  <h1><a href="{{ site.baseurl }}">Collaborative PL-Science</a></h1>
+  <h1><a href="{{ site.baseurl }}">ECOS PL-Science</a></h1>
   <ul>
     <li><a href="{{ site.baseurl }}">Home</a></li>
     <li><a href="{{ "/research-group/" | prepend: site.baseurl }}">Research Group</a></li>
